--- a/115-manage-documents/app.csproj
+++ b/115-manage-documents/app.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.17.0" />
+  </ItemGroup>
+
 </Project>
