--- a/125-manage-queries/app.csproj
+++ b/125-manage-queries/app.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.17.0" />
+  </ItemGroup>
+
 </Project>
